# serializer version: 1
# name: test_do_ops
  None
# ---
# name: test_do_ops_DI_with_protocol_mock
  'start336.125'
# ---
# name: test_do_ops_DI_with_protocol_mock_snap
  list([
    'start6612.363636363636363',
    tuple(
      '6612.363636363636363',
    ),
  ])
# ---
# name: test_do_ops_DI_with_protocol_mock_snap.1
  list([
    'start111133.470588235294116',
    tuple(
      '111133.470588235294116',
    ),
  ])
# ---
# name: test_do_ops_with_protocol_mock
  list([
    tuple(
      3,
    ),
    tuple(
      'expr(1, 2)',
    ),
    tuple(
      'concat(1, 2)',
    ),
  ])
# ---
# name: test_real_ops_one_plus
  13
# ---
# name: test_real_ops_one_plus.1
  6
# ---
